tests-system/builtin-2/output
len == trlc:len(str), warning "potato", len
       ^^^^ builtin-2/legacy.rsl:9: error: unknown symbol trlc
Processed 1 model and 0 requirement files and found 1 error
